--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,6 +5,11 @@
     --lower-navbar-link-color: #fd90fd;
 }
 
+html, body {
+    height: 100%;
+    width: 100%
+}
+
 /* Block for the title and subtitle */
 .titles {
     margin: auto;
@@ -35,7 +40,7 @@
     background-size: cover;
     background-position: 0 40%;
     background-repeat: no-repeat;
-    height: 300px;
+    height: 40%;
 }
 
 /* Navbar beneath the header */
@@ -68,10 +73,36 @@
 
 .upper {
     justify-content: space-between;
-    padding: 0 5px;
+    padding: 0 20px;
+    background-color: #d7c8c833;
 }
 
 .upper > li > a {
     color: #FFF;
     text-decoration: underline;
 }
+
+.main {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.frame {
+    display: flex;
+}
+
+.btn {
+    align-self: center;
+    margin: 2rem; 
+}
+
+
