--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,7 +12,7 @@ html, body {
 
 /* Block for the title and subtitle */
 .titles {
-    margin: auto;
+    margin: auto 15rem;
     font-family: "Cinzel Decorative";
 }
 
@@ -38,9 +38,9 @@ html, body {
     flex-direction: column;
     background-image: url(../resources/IMG_3569.JPG);
     background-size: cover;
-    background-position: 0 40%;
+    background-position: 0 39%;
     background-repeat: no-repeat;
-    height: 40%;
+    height: 310px;
 }
 
 /* Navbar beneath the header */
@@ -75,6 +75,9 @@ html, body {
     justify-content: space-between;
     padding: 0 20px;
     background-color: #d7c8c833;
+    margin: 0;
+    align-items: center;
+    height: 2rem;
 }
 
 .upper > li > a {
@@ -82,27 +85,13 @@ html, body {
     text-decoration: underline;
 }
 
-.main {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    width: 100%;
-    height: 100%;
-}
-
-.gallery {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.frame {
-    display: flex;
-}
-
-.btn {
+.prev-button, .next-button {
     align-self: center;
-    margin: 2rem; 
 }
 
+
+.title-with-btns {
+    display: flex;
+    margin: auto;
+}
 
